# sqcrab

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
sqcrab/: Cargo.toml
sqcrab-builder/: Cargo.toml
sqcrab-builder/src/: domain.rs
sqcrab-macro/: Cargo.toml
sqcrab-macro-impl/: Cargo.toml
sqcrab-macro-impl/src/: hint.rs  lib.rs  sqcrab.rs  sqobject.rs
sqcrab-macro/src/: lib.rs
sqcrab-samples/: Cargo.toml  build.rs  sqcrab.toml
sqcrab-samples/scripts/: unit.nut
sqcrab-samples/src/: main.rs  sqcrab_domains.rs  unit.rs
sqcrab/src/: crab.rs  debug.rs  domain.rs  lib.rs
squirrel/: Cargo.toml  build.rs
squirrel-cnut/: Cargo.toml
squirrel-cnut/src/: binary.rs  function.rs  instruction.rs  lib.rs  line_info.rs  local_var.rs  object.rs  outer_val.rs
squirrel-cnut/src/utils/: endianness.rs  error.rs  reader.rs  slice.rs
squirrel-sys/: Cargo.toml  build.rs
squirrel-sys/src/: bindings.rs
squirrel-sys/tests/: bindings.rs
squirrel-sys/tests/data/: sample_functions.nut  sample_printf.nut  sample_printf_bad.nut
squirrel/cpp/: format_print.cpp
squirrel/src/: err.rs  lib.rs  obj_type.rs  object.rs  print_cb.rs  type_cnv.rs  vm.rs
squirrel/tests/: squirrel.rs
squirrel/tests/data/: functions.nut
