[package]
name = "sqcrab"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.10"
humantime = "2.3.0"
# riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools", features = ["detailed-logs"] }
squirrel = { path = "../squirrel" }